# yokg

./: .gitignore  Justfile  Makefile  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/ai/: .editorconfig
apps/ai/app/: main.py
apps/backend/: .dockerignore  .env.example  Dockerfile  compose.yml  drizzle.config.ts  package.json  tsconfig.json  tsdown.config.ts  vitest.config.unit.ts
apps/backend/src/: app.ts  main.ts
apps/backend/src/@types/: hono.d.ts  process-env.d.ts
apps/backend/src/errors/: business-error.ts  helpers.ts  index.ts  retryable-error.ts  system-error.ts
apps/backend/src/exceptions/: business-exception.ts  system-exception.ts
apps/backend/src/lib/: auth.ts  better-auth-error-mapper.ts  config.ts  error-handler.ts  file-type.ts  http.ts  result.ts
apps/backend/src/middlewares/: busboy.ts  inject-session.ts  logger.ts  require-auth.ts  validator.ts
apps/backend/src/repositories/: graph.repository.interface.ts  (+3 more)
apps/compute/: Justfile  README.md  pyproject.toml
apps/web/: .env.example  .mcp.json  biome.json  components.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: env.ts  main.tsx  route-tree.gen.ts  style.css  styles.css
openspec/: project.md
openspec/changes/add-dynamic-node-type-ui/: proposal.md  tasks.md
openspec/changes/add-rag-search-module/: design.md  proposal.md  tasks.md
openspec/changes/implement-graph-module/: design.md  proposal.md  tasks.md
openspec/changes/implement-storage-interface/: design.md  proposal.md  tasks.md
scripts/: clean-node-modules.ts
(+123 files in other folders)
